kind/kind-traefik-ingress/httpsimg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-https-echo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-https-echo
  template:
    metadata:
      labels:
        app: http-https-echo
    spec:
      containers:
      - name: http-https-echo
        image: mendhak/http-https-echo
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: http-https-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  - name: https
    targetPort: 443
    port: 443
  selector:
    app: http-https-echo
