kind/kind-traefik-ingress/example3-http-https-echo-sslpassthrough.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-https-echo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-https-echo
  template:
    metadata:
      labels:
        app: http-https-echo
    spec:
      containers:
      - name: http-https-echo
        image: mendhak/http-https-echo
        readinessProbe:
          httpGet:
            scheme: HTTPS
            path: /
            port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: http-https-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  - name: https
    targetPort: 443
    port: 443
  selector:
    app: http-https-echo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-https-echo-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /echo
        pathType: Prefix
        backend:
          service:
            name: http-https-service
            port:
              number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: https-echo-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`*`)
    services:
    - name: http-https-service
      port: 443
      weight: 1
  tls:
    domains:
    - main: 192.168.56.101.nip.io
      sans:
      - "echo.192.168.56.101.nip.io"
    passthrough: true
