kind/kind-traefik-ingress/example4-http-https-passthrough.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-https-echo-deployment-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-https-echo-2
  template:
    metadata:
      labels:
        app: http-https-echo-2
    spec:
      containers:
        - name: http-https-echo-2
          image: mendhak/http-https-echo
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /
              port: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: http-https-service-2
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 8080
    - name: https
      targetPort: 8443
      port: 8443
  selector:
    app: http-https-echo-2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-https-echo-ingress-2
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /echo2
            pathType: Prefix
            backend:
              service:
                name: http-https-service-2
                port:
                  number: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: https-echo-ingress-route-2
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`*`)
      services:
        - name: http-https-service-2
          port: 8443
          weight: 1
  tls:
    domains:
      - main: localhost
        sans:
          - "localhost"
    passthrough: true
